--- a/package.json
+++ b/package.json
@@ -1,28 +1,33 @@
 {
+  "homepage": "https://Raghuvardhan31.github.io/temp_chess",
   "name": "my-chess-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "chess.js": "^1.4.0",
+    "react": "^18.2.0",
+    "react-chessboard": "^5.8.6",
+    "react-dom": "^18.2.0",
     "stockfish.js": "^10.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
+    "@types/react": "^18.2.7",
+    "@types/react-dom": "^18.2.4",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
-    "globals": "^16.5.0",
+    "gh-pages": "^6.3.0",
     "vite": "^7.2.4"
   }
 }
