--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.86.0",
     "chess.js": "^1.4.0",
     "react": "^18.2.0",
     "react-chessboard": "^5.8.6",
